pkg/provider/kubernetes/ingress/fixtures/Ingress-with-a-basic-rule-on-one-path-with-https-(portname-starts-with-https)_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - http:
      paths:
      - path: /bar
        backend:
          service:
            name: service1
            port:
              number: 8443
        pathType: Prefix
